[gd_scene load_steps=5 format=3 uid="uid://cwikbo78mibr2"]

[ext_resource type="Script" path="res://entities/boids/boid.gd" id="1_nsgrk"]
[ext_resource type="Texture2D" uid="uid://bpic17ctsq2wv" path="res://art/entities/boids/fish.png" id="2_pq5ew"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1q5cq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5hj7i"]
radius = 128.0
height = 500.0

[node name="Boid" type="CharacterBody2D" groups=["boid"]]
collision_layer = 256
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_nsgrk")
number_of_rays = 9
ray_span_degrees = 210.0
max_speed = 150.0
cohesion_weight = 3.0
ray_collision_mask = 267

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_1q5cq")

[node name="Vision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2(190, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5hj7i")

[node name="RayContainer" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2(-8, 0)
scale = Vector2(1, 0.5)
color = Color(0.68, 0.728, 1, 1)
polygon = PackedVector2Array(24, 0, 8, 16, -8, 8, -8, 0, -16, 8, -16, -8, -8, 0, -8, -8, 8, -16)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_pq5ew")
offset = Vector2(-50, -30)
flip_h = true

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
